# GameHub

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
highway/: Dockerfile  README.md  pyproject.toml
highway/alembic/: env.py
highway/alembic/versions/: 1b2c3d4e5f6a_add_energy_wishes.py  1b77e27f91fb_init.py  2a6ae631907c_init.py  3b9d7d573b0a_add_user_language.py  3c1b6f541aa5_i18n_jsonb.py  760e50129cab_add_template_extras.py  922b6f6d0192_new_migration.py  ad626564aa2f_add_visual_style_to_story.py  b1c2d3e4f5ab_worlds_and_stories.py  b3d9d50b1f2a_add_image_format_to_users.py  df5e3b8d1a2c_update_worlds_and_stories.py  f9ddc695d680_add_npc_characters_fpr_story.py
highway/src/: config.py  cron.py  main.py
highway/src/api/: utils.py
highway/src/api/admin/: router.py
highway/src/api/auth/: router.py
highway/src/api/payments/: router.py
highway/src/api/scenes/: router.py  scene_service.py  schemas.py
highway/src/api/sessions/: router.py  schemas.py
highway/src/api/stories/: router.py
highway/src/api/templates/: router.py  schemas.py  template_service.py
highway/src/auth/: tg_auth.py
highway/src/core/: database.py
highway/src/game/: config.py
highway/src/models/: __init__.py  bundle_purchase.py  choice.py  game_session.py  game_template.py  scene.py  story.py  subscription.py  user.py  world.py
highway/src/routes/: auth.py  gradio_proxy.py  token.py
highway/src/utils/: cache.py  import_stories_on_startup.py  tg_invoice.py
highway/stories/: golden_set.json
highway/tests/: test_endpoints.py  test_main.py
(+154 files in other folders)
